--- a/src/Anyx/CrosswordBundle/Resources/views/Default/index.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Default/index.html.twig
@@ -25,6 +25,10 @@
 	{% endjavascripts %}    
 {% endblock %}
     
+{% block title %}
+    {{ 'Welcome to crossword editor' | trans }}
+{% endblock %}
+    
 {% block body %}
 
 <article>
