--- a/src/Anyx/CrosswordBundle/Resources/views/Lists/new.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Lists/new.html.twig
@@ -9,10 +9,16 @@
 	{% endstylesheets %}
 {% endblock %}
 
+{% set title = 'New crosswords' | trans %}
+        
 {% block page_title %}
-    {{ 'New crosswords' | trans }}
+    {{ title }}
 {% endblock %}
 
+{% block title %}
+    {{ title }}
+{% endblock %}
+        
 {% block page_subtitle %}
 <div class="menu-subtitle">
     {{ knp_menu_render('AnyxCrosswordBundle:Builder:crosswordsMenu', {'template' : 'AnyxCrosswordBundle:Default:menu.html.twig', 'rootClass' : 'bullets margin-right' }) }}
