--- a/src/Anyx/PageBundle/Resources/views/Default/index.html.twig
+++ b/src/Anyx/PageBundle/Resources/views/Default/index.html.twig
@@ -6,6 +6,15 @@
     {{ title }}
 {% endblock %}
 
+{% block page_description %}
+    {{ page.description }}
+{% endblock %}
+
+{% block page_keywords %}
+    {{ page.keywords }}
+{% endblock %}
+
+
 {% block title %}
     {{ title }}
 {% endblock %}
