--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Редактор кроссвордов | {% block title %}{% endblock %}</title>
+        <title>{{ 'Crosswords editor' | trans }} | {% block title %}{% endblock %}</title>
 
 		{% block stylesheets %}
 			{% stylesheets
@@ -23,6 +23,10 @@
             <link href='http://fonts.googleapis.com/css?family=Play&amp;subset=cyrillic,latin' rel='stylesheet' type='text/css'>
 		{% endblock %}		
 
+        {% set description = 'Crossword editor. Service for creating and solving crosswords' | trans %}
+        <meta name="description" content="{{ description }}, {% block page_description %}{% endblock %}" />
+        <meta name="keywords" content="{{ 'site.keywords' | trans }}, {% block page_keywords %}{% endblock %}" />           
+            
         {% block javascripts %}{% endblock %}
             
         <!-- For progressively larger displays -->
