--- a/src/Anyx/CrosswordBundle/Resources/views/Lists/popular.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Lists/popular.html.twig
@@ -27,6 +27,10 @@
         
 {% block body %}
 <div class="results clear">
-    {% include 'AnyxCrosswordBundle:Lists:list.html.twig' with {'result': result}  %}
+    {% if result is not empty %}
+        {% include 'AnyxCrosswordBundle:Lists:list.html.twig' with {'result': result}  %}
+    {% else %}
+        <div>{{ 'Crosswords not found' | trans }}</div>
+    {% endif %}    
 </div>
 {% endblock %}
