--- a/src/Anyx/CrosswordBundle/Resources/views/Lists/new.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Lists/new.html.twig
@@ -26,9 +26,11 @@
 {% endblock %}
         
 {% block body %}
-
-        
 <div class="results clear">
-    {% include 'AnyxCrosswordBundle:Lists:list.html.twig' with {'result': result}  %}
+    {% if result is not empty %}
+        {% include 'AnyxCrosswordBundle:Lists:list.html.twig' with {'result': result}  %}
+    {% else %}
+        <div>{{ 'Crosswords not found' | trans }}</div>
+    {% endif %}    
 </div>
 {% endblock %}
