--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -60,11 +60,17 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+    
+    <script type="text/javascript" src="http://userapi.com/js/api/openapi.js?50"></script>
+
+    <script type="text/javascript">
+    VK.init({apiId: {{vkOptions.client_id}}, onlyWidgets: true});
+    </script>
 </head>
 
 <body role="document">
 
-	<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
+    <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
 			 chromium.org/developers/how-tos/chrome-frame-getting-started -->
 	<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
@@ -169,10 +175,44 @@
 
 			<h4 id="share">{%trans%}Share{%endtrans%}</h4>
 
-			<div id="sharrre">
-				<div id="twitter" data-url="http://www.display-inline.fr/demo/developr/" data-text="Building a web app for desktop and mobile devices? Developr Admin Skin is for you: http://goo.gl/GDdmr"></div>
-				<div id="facebook" data-url="http://www.display-inline.fr/demo/developr/" data-text="Building a web app for desktop and mobile devices? Developr Admin Skin is for you: http://goo.gl/GDdmr"></div>
-				<div id="googleplus" data-url="http://www.display-inline.fr/demo/developr/" data-text="Building a web app for desktop and mobile devices? Developr Admin Skin is for you: http://goo.gl/GDdmr"></div>
+            <div class="sharing">
+                <div class="chareButton">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="zryaneskazhev" data-lang="ru">Твитнуть</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                </div>
+
+                <div class="chareButton">
+                    <div class="fb-like" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+
+                    <div id="fb-root"></div>
+                    <script>(function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) return;
+                    js = d.createElement(s); js.id = id;
+                    js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=204794436315935";
+                    fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));</script>                
+                </div>
+                
+                <div class="chareButton">
+                <div id="vk_like"></div>
+                <script type="text/javascript">
+                    VK.Widgets.Like("vk_like", {type: "full"});
+                </script>
+                </div>
+                    
+                <div class="chareButton">
+                    <div class="g-plusone" data-size="medium"></div>
+
+                    <script type="text/javascript">
+                    (function() {
+                        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                        po.src = 'https://apis.google.com/js/plusone.js';
+                        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+                    })();
+                    </script>
+                </div>
+                    
 			</div>
 
 		</aside>
@@ -180,9 +220,17 @@
 	</div></div>
     
 	<footer role="contentinfo"><div class="container">
-            <div class="footer-info">
+        <div class="footer-info">
+            <div class="container">
+                <div class="columns">
+                    {{ knp_menu_render('AnyxCrosswordBundle:Builder:bottomMenu', {'template' : 'AnyxCrosswordBundle:Default:menu.html.twig', 'rootClass' : 'footer-menu' }) }}
+                </div>
+                <div class="float-right copyright">
+                    <p>{{ 'All rights must be reserved' | trans }} <br />&copy; <a href="http://anyx.me">anyx</a> {{ "now"|date("Y") }}</p>
+                </div>
             </div>
-	</div></footer>
+        </div>
+    </footer>
     
     <script type="text/javascript">
         // Colorbox
