Change vk button height

--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -197,7 +197,7 @@
                 <div class="chareButton">
                 <div id="vk_like"></div>
                 <script type="text/javascript">
-                    VK.Widgets.Like("vk_like", {type: "full"});
+                    VK.Widgets.Like("vk_like", {type: "full", height:20});
                 </script>
                 </div>
                     
