--- a/src/Anyx/CrosswordBundle/Resources/views/Constructor/index.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Constructor/index.html.twig
@@ -73,6 +73,8 @@
                     saving          : '{%trans%}Saving...{%endtrans%}'
                 }
 			});
+            
+            console.log( {{crossword.words | serialize | raw}} );
 		});
 	</script>
 	
