Edit translations, js events

--- a/src/Anyx/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Anyx/UserBundle/Resources/views/Security/login.html.twig
@@ -21,11 +21,11 @@
     <ul class="inputs">
         <li>
             <span class="icon-user mid-margin-right"></span>
-            <input type="text" autocomplete="off" placeholder="{{ 'security.login.username'|trans }}" class="input-unstyled" value="{{ last_username }}" id="username" name="_username">
+            <input type="text" autocomplete="off" placeholder="{{ 'username'|trans }}" class="input-unstyled" value="{{ last_username }}" id="username" name="_username">
         </li>
         <li>
             <span class="icon-lock mid-margin-right"></span>
-            <input type="password" autocomplete="off" placeholder="{{ 'security.login.password'|trans }}" class="input-unstyled" value="" id="password" name="_password">
+            <input type="password" autocomplete="off" placeholder="{{ 'password'|trans }}" class="input-unstyled" value="" id="password" name="_password">
         </li>
     </ul>
     
